more spacing fixes

--- a/src/templates/prism-theme.css
+++ b/src/templates/prism-theme.css
@@ -141,8 +141,6 @@ pre[data-line] {
 .gatsby-highlight-code-line {
   background-color: hsla(207, 95%, 15%, 1);
   display: block;
-  margin-right: -1.3125rem;
-  margin-left: -1.3125rem;
   padding-right: 1em;
   padding-left: 0.75em;
   border-left: 0.25em solid #ffa7c4;
